# tauri-svelte-synced-store

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
src/: lib.rs
src/lib/: index.svelte.ts
