[package]
name = "tauri-svelte-synced-store"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "~2.0.0-rc.21"
specta-typescript = "~0.0.9"
tracing = "0.1.41"
tauri-specta = { version = "~2.0.0-rc.21", features = ["derive", "typescript"] }
tracing-subscriber = "0.3.19"
tauri = { version = "2.0", features = [] }
tauri-plugin-store = "2.4.1"
